# SkeyPort

hw4-msalam/: README
hw4-msalam/skey-2.0/: .nfs000000000004cd6c0000003f  .nfs000000000004cee500000040  .nfs000000000004cfdf0000003d  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README~  buildall  confdefs.h  config.h.in  config.h.in~  configure  configure.ac  conftest.c  myfile.txt  sysv_shadow.h
hw4-msalam/skey-2.0/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
hw4-msalam/skey-2.0/include/: Makefile.am  Makefile.in  md4.h  skey.h  skeylibraryfunctions.h
hw4-msalam/skey-2.0/lib/: Makefile.am  Makefile.in  md4.c  put.c  skeylogin.c  skeysubr.c
hw4-msalam/skey-2.0/lib/.deps/: md4.Po  put.Po  skeylogin.Po  skeysubr.Po
hw4-msalam/skey-2.0/skey/: .nfs0000000000046c2900000041  Makefile.am  Makefile.in  key.1  regressiontest  skey.1  skey.c  skeyinit.c  skeysh.c
hw4-msalam/skey-2.0/skey/.deps/: skey.Po  skeysh.Po
